# spacetraders

./: .env  pyproject.toml
py_src/: __util__.py  agent.py  client.py  contract.py  faction.py  main.py  main_1.py  main_gui.py  prompts.py  ship.py  system.py  waypoint.py
src/: agent.py  client.py  contract.py  main.py  prompts.py  ship.py  system.py  waypoint.py
