[tool.poetry]
name = "spacetraders"
version = "0.1.0"
description = ""
authors = ["Addison Freeman <addisonfreeman91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.12"
requests = "^2.30.0"
inquirer = "^3.1.3"
nicegui = "^1.2.13"
python-dotenv = "^1.0.0"
pydash = "^7.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
